Add tests + spotless format

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url = jdbc:postgresql://localhost:5432/blog-app
 spring.datasource.username = axelor
 spring.datasource.password = axelor
+
+spring.jpa.show-sql = true
