--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins{
     id 'java'
     id 'org.springframework.boot' version '3.5.5'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'com.diffplug.spotless' version '6.25.0'
 }
 
 group = 'com.hancy'
@@ -11,6 +12,12 @@ description = 'Blogingg app'
 java{
     toolchain{
         languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+spotless {
+    java {
+        googleJavaFormat()
     }
 }
 
@@ -28,8 +35,6 @@ dependencies{
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12'
-    compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -47,3 +52,5 @@ jar {
         )
     }
 }
+
+build.finalizedBy 'spotlessApply'
