--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url = jdbc:postgresql://localhost:5432/blog-app
-spring.datasource.username = axelor
-spring.datasource.password = axelor
+spring.datasource.username = admin
+spring.datasource.password = *****
 
 spring.jpa.show-sql = true
